--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,18 +1,18 @@
 .navbar-brand {
     color: white;
-    font-size: 35px;
+    margin-top: -10px;
+    font-size: 19px;
     font-weight: 500;
 }
 
 .navbar-brand:hover {
     color: white;
-    font-size: 35px;
     font-weight: 500;
 }
 
 .nav-link {
     color: white;
-    font-size: '15px';
+    font-size: 15px;
     font-weight: 400;
 }
 
@@ -22,21 +22,17 @@
 }
 
 .loginbtn {
-    border: 1px solid white;
-    background-color: #8CC327;
     width: 80px;
     height: 50px;
-    border-radius: 30px;
 }
 
 .loginbtn:hover {
-    color: #8CC327;
-    background-color: white;
+    color: cyan;
 }
 
 .navbar {
     box-shadow: 0px 0px 20px #00000029;
-    background: transparent linear-gradient(107deg, #3F6A0C 0%, #8CC327 100%) 0% 0% no-repeat padding-box;
+    background: black;
     -webkit-transition: all 0.4s ease;
     -moz-transition: all 0.4s ease;
     -o-transition: all 0.4s ease;
@@ -65,8 +61,9 @@
     font-weight: 500;
     font-size: small;
 }
-.signup{
+
+.signup {
     font-size: 13px;
     text-decoration: none;
-     color:black;
+    color: black;
 }
